Пуш 1 лабы по тестам (хуйне ебанной)